Refactor: unify code style